# crypto-finder

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
notebooks/: 01-model-prototyping.ipynb
scripts/: build_controlled_dataset.py  download_firmware.py  run_pipeline.py
scripts/crypto_sources/: tiny_aes.c
src/crypto_finder/: main.py
src/crypto_finder/api/: endpoints.py  main.py  models.py
src/crypto_finder/common/: config.py  db.py  logging.py
src/crypto_finder/dynamic_runner/: cli.py  core.py
src/crypto_finder/dynamic_runner/harnesses/: qemu_harness.py
src/crypto_finder/lifter/: cli.py  core.py
src/crypto_finder/lifter/adapters/: GhidraExportScript.py  capstone.py  ghidra.py
src/crypto_finder/ml/: datasets.py  evaluate.py  features.py  models.py  train.py
src/crypto_finder/static_scanner/: cli.py  core.py
src/crypto_finder/static_scanner/signatures/: crypto_constants.json  findcrypt.yar
src/crypto_finder/symbolic/: cli.py  loop_analyzer.py
src/plugins/ghidra_plugin/: GhidraExportScript.py
src/plugins/ida_plugin/: ida_api_connector.py
tests/: conftest.py
tests/lifter/: test_core.py
tests/ml/: test_models.py
