

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_finder-by-team-loud"
version = "0.1.0"
description = "An AI/ML framework to identify cryptographic primitives in firmware."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Core & CLI
    "typer[all]",      
    "pydantic",        
    "pydantic-settings",
    "loguru",      

    # Analysis Tools
    "ghidra_bridge", 
    "capstone",      
    "yara-python",   
    "angr",      
    "unicorn", 

    # Database
    "sqlalchemy",
    "alembic",

    # API & Reporting
    "fastapi", 
    "uvicorn[standard]",
    "jinja2",

    "torch",
    "scikit-learn",
    "pandas",
    "unicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
crypto-finder = "crypto_finder.main:app"
